src/index.css
body {
  margin: 0;
  background: #424242;
  color: white;
}

#parallax-img {
  transform: translate3d(-50%, 315.824px, 0px);
  opacity: 1;
  width: 100%;
}

#about-text {
  background-color: rgb(97, 97, 97, 0.8);
  border-radius: 15px;
}

.btn {
  background-color: #9932CC;
  margin: 1px;
}

#card-text {
  color: black;
}

i {
  padding: 8px;
}

.carousel {
  overflow: unset;
  margin: 10px;
}

.card {
  max-width: 50%;
  text-align: left;
}

@media screen and (max-width: 850px) {
  .card {
    max-height: 10%;
    max-width: 100%;
  }
}

